@@ -162,8 +162,11 @@ public class ZooKeeperExt {
             if (progressable != null) {
               progressable.progress();
             }
-            zooKeeper.create(
-                path.substring(0, pos), null, acl, CreateMode.PERSISTENT);
+            String filePath = path.substring(0, pos);
+            if (zooKeeper.exists(filePath, false) == null) {
+              zooKeeper.create(
+                  filePath, null, acl, CreateMode.PERSISTENT);
+            }
           } catch (KeeperException.NodeExistsException e) {
             if (LOG.isDebugEnabled()) {
               LOG.debug("createExt: Znode " + path.substring(0, pos) +
